# flameshot-ocr-server

./: Cargo.toml  run.sh
src/: errors.rs  main.rs  ocr.rs  server.rs  translate.rs
